--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <script src="https://apis.google.com/js/api:client.js"></script> -->
 
-    <title>Vite + React + TS</title>
+    <title>Countedin</title>
   </head>
   <body>
     <div id="root"></div>
